option(
	'bugreport_url',
	type: 'string',
	value: 'https://github.com/lethalbit/clank/issues',
	description: 'URL for bug report submissions'
)

option(
	'disable_logging',
	type: 'boolean',
	value: false,
	description: 'Disable all logging, even in debug mode (useful for better benchmarks)'
)

option(
	'release_logging',
	type: 'boolean',
	value: false,
	description: 'Enable trace logging even in release mode'
)

option(
	'build_tests',
	type: 'boolean',
	value: true,
	description: 'Build the library with tests'
)

option(
	'build_benchmarks',
	type: 'boolean',
	value: true,
	description: 'Build the benchmarks'
)

option(
	'build_examples',
	type: 'boolean',
	value: true,
	description: 'Build the library with examples'
)

option(
	'install_examples',
	type: 'boolean',
	value: true,
	description: 'Install example sources into $PREFIX/share/libclank/examples'
)

option(
	'build_fuzzers',
	type: 'boolean',
	value: true,
	description: 'Build fuzzing harness'
)

option(
	'build_bindings',
	type: 'boolean',
	value: true,
	description: 'Build the library with bindings'
)

option(
	'bindings_python',
	type: 'boolean',
	value: true,
	description: 'Build the python bindings (only if build_bindings is enabled)'
)
